# autonomous-robot-simulation

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/: draft.md
doc/diagrams/: class-diagram.puml  seq-diagram.puml
doc/video/: anticollision.webm  fps_independency.webm  merlin_testing.webm
docs/latex/: autorobot_8cpp.tex  autorobot_8cpp__incl.md5  checkablebutton_8cpp.tex  checkablebutton_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  expbutton_8cpp.tex  expbutton_8cpp__incl.md5  expbuttonwidget_8cpp.tex  expbuttonwidget_8cpp__incl.md5  files.tex  mainwindow_8cpp.tex  mainwindow_8cpp__incl.md5  obstacle_8cpp.tex  obstacle_8cpp__incl.md5  overlaywidget_8cpp.tex  overlaywidget_8cpp__incl.md5  paramwidget_8cpp.tex  paramwidget_8cpp__incl.md5  popupsavewindow_8cpp.tex  popupsavewindow_8cpp__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  robot_8cpp.tex  robot_8cpp__incl.md5  simulationengine_8cpp.tex  simulationengine_8cpp__incl.md5
docs/latex/__latex__/: refman.aux  refman.fdb_latexmk  refman.fls  refman.idx  refman.ind  refman.out  refman.toc
examples/: 1v1.json  army.json  flower.json
headers/: angledirection.h  autonomousrobot.h  autorobot.hpp  checkablebutton.hpp  controlledrobot.h  expbutton.hpp  expbuttonwidget.hpp  gameobject.h  gameobject.hpp  mainwindow.h  objects.h  obstacle.h  obstacle.hpp  overlaywidget.hpp  parameditline.hpp  paramwidget.hpp  popupsavewindow.h  robot.h  robot.hpp  robutek.hpp  samorobutek.hpp  simulation.h  simulationengine.hpp
popupwindow/: popupsavewindow.cpp  popupsavewindow.h
src/: autonomousrobot.cpp  autorobot.cpp  checkablebutton.cpp  controlledrobot.cpp  expbutton.cpp  expbuttonwidget.cpp  gameobject.cpp  mainwindow.cpp  mainwindow.ui  obstacle.cpp  overlaywidget.cpp  paramwidget.cpp  popupsavewindow.cpp  robot.cpp  robutek.cpp  simulation.cpp  simulationengine.cpp
